--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,5 +10,9 @@
     <string name="Login">Login</string>
     <string name="slogan">The key in your phone</string>
     <string name="kisi">KISI</string>
+    <string name="locationonedoor">Location with one Door</string>
+    <string name="doorOne">Open Door One</string>
+    <string name="doortwoopen">Open Door Two</string>
+    <string name="locationtwodoors">Location with Two Doors</string>
 
 </resources>
