--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,9 +4,9 @@
     <string name="app_name">KisiBox</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="Username">E-Mail:</string>
-    <string name="Password">Password:</string>
-    <string name="RememberMe">Remember Me</string>
+    <string name="Username">eMail</string>
+    <string name="Password">Password</string>
+    <string name="RememberMe">Remember login details</string>
     <string name="Login">Login</string>
     <string name="slogan">The key in your phone</string>
     <string name="kisi">KISI</string>
@@ -18,5 +18,9 @@
     <string name="doorthreeopen">Open Door Three</string>
     <string name="doorfouropen">Open Door Four</string>
     <string name="locationfourdoors">Location with Four Doors</string>
+    <string name="logo">Logo</string>
+    <string name="slogantwo">Unlock your world</string>
+    <string name="forgot">Forgot your password?</string>
+    <string name="newUser">New? Get started on our website</string>
 
 </resources>
