--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">KisiBox</string>
+    <string name="app_name">KISI</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="Username">eMail</string>
+    <string name="Email">Email</string>
     <string name="Password">Password</string>
     <string name="RememberMe">Remember login details</string>
     <string name="Login">Login</string>
