--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,5 +22,7 @@
     <string name="slogantwo">Unlock your world</string>
     <string name="forgot">Forgot your password?</string>
     <string name="newUser">New? Get started on our website</string>
+    
+    <string name="pressto">Press to secure unlock</string>
 
 </resources>
