gave fields better names, fixed spelling error, focus on password field if password not saved

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="Email">Email</string>
     <string name="Password">Password</string>
-    <string name="RememberMe">Remember login details</string>
+    <string name="RememberMe">Remember password</string>
     <string name="Login">Login</string>
     <string name="slogan">The key in your phone</string>
     <string name="kisi">KISI</string>
