--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,6 +22,8 @@
     <string name="slogantwo">Unlock your world</string>
     <string name="forgot">Forgot your password?</string>
     <string name="newUser">New? Get started on our website</string>
+    <string name="refresh">Refresh</string>
+    <string name="share">Share this Location</string>
     
     <string name="pressto">Press to secure unlock</string>
 
