--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -23,10 +23,10 @@
     <string name="forgot">Forgot your password?</string>
     <string name="newUser">New? Get started on our website</string>
     <string name="refresh">Refresh</string>
-    <string name="share">Share this Location</string>
+    <string name="share">Share this place</string>
     <string name="log">Get log information</string>
     <string name="logout">Logout</string>
-    <string name="exit">Exit Application</string>
+    <string name="setup">Setup Kisibox device</string>
     
     <string name="pressto">Press to secure unlock</string>
 
