--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="share_success">Key for %s was created successfully.</string>
     <string name="share_error">You have to share at least one lock!</string>
     
+    <string name="session_timeout_relogin">Session timeout. Please login again.</string>
 
 
 </resources>
